data/all_generated_tests/raw_wast_tests/br_if_InfiniteLoops_1585.wast
;; 6. **Test Description**:     - Generate a deeply nested set of loops with a `br_if` targeting the innermost loop with a true condition.    - **Constraint Checking**: Examines the effective handling and resolution of deep label propagation and accurate loop continuation.    - **Infinite Loop Relation**: Prevents inner loop conditions from forcing outer loops into unbreakable loops, confirming the deep nesting handling is correct.

(assert_invalid
  (module
    (func $deeply_nested_loops
      (block $outer
        (loop $inner
          (block $mid
            (br_if $inner (i32.const 1))
          )
        )
      )
    )
  )
  "invalid label"
)